# federated_learning_BLE

./: .gitignore  README.md  readme.md
central/: federated_learning_BLE_central.code-workspace
central/federated_learning_BLE_central_host/: app.py
peripheral/: federated_learning_peripheral.code-workspace
peripheral/federated_learning_BLE_peripheral/: .cproject  .gitignore  .project  advertiser.h  app.c  app.h  federated_learning_BLE_peripheral.slcp  federated_learning_BLE_peripheral.slps  gatt_handlers.c  gatt_handlers.h  vscode.conf
peripheral/federated_learning_BLE_peripheral/.uceditor/: .federated_learning_BLE_peripheral.app_log.cedit  .federated_learning_BLE_peripheral.board_control.cedit  .federated_learning_BLE_peripheral.iostream_usartvcom.cedit
peripheral/federated_learning_BLE_peripheral/autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c
peripheral/federated_learning_BLE_peripheral/config/btconf/: gatt_configuration.btconf
peripheral/federated_learning_BLE_peripheral/federated_learning_BLE_peripheral_cmake/: CMakeLists.txt  CMakePresets.json  federated_learning_BLE_peripheral.cmake  federated_learning_BLE_peripheral_project.cmake  toolchain.cmake
peripheral/federated_learning_peripheral/: .cproject  .gitignore  .project  .projectchecksums  advertiser.c  advertiser.h  app.c  app.h  federated_learning_peripheral.pintool  federated_learning_peripheral.slcp  federated_learning_peripheral.slps  gatt_configuration.btconf  gatt_handlers.c  gatt_handlers.h  readme.md  vscode.conf
peripheral/federated_learning_peripheral/.pdm/: uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
peripheral/federated_learning_peripheral/autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  sl_bluetooth.h  sl_component_catalog.h  sl_event_handler.c
peripheral/federated_learning_peripheral/config/btconf/: gatt_configuration.btconf
